maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:6: error: value && is not a member of plm.universe.Direction
    if(getDirection() == Direction.NORD && isDirectionFree(Direction.NORTH && sommeAngle == 0)){
                                                                           ^